# compound-orchestrator

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
agents/: compound-architect.agent.md  compound-cross-tool-reviewer.agent.md  compound-reviewer.agent.md  compound-test-runner.agent.md
commands/: compound-claim.md  compound-cross-review.md  compound-deliverables-check.md  compound-harness-check.md  compound-init.md  compound-learn.md  compound-ownership-status.md  compound-plan.md  compound-release.md  compound-review.md  compound-start.md  compound-team-start.md
docs/compound/: 2026-05-22-plugin-v0-3-planning-review-loop.md
hooks/: hooks.json
scripts/: compound_orchestrator.py  verify_plugin.ps1  verify_plugin.sh
skills/codex-cross-tool-reviewer/: SKILL.md
skills/compound-orchestrator/: SKILL.md
tests/: test_compound_orchestrator.py
